# lazyrsync

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: app.rs  editor.rs  main.rs  paths.rs  preview.rs  profile.rs  rsync.rs  run.rs  store.rs
src/popups/: add_task.rs  alert.rs  confirm_clear.rs  confirm_delete.rs  confirm_run.rs  edit.rs  help.rs  mod.rs  prompt.rs
src/screens/browse/: input.rs  mod.rs  render.rs  run.rs
src/ui/: age.rs  fields.rs  log.rs  mod.rs  preview.rs  theme.rs
